<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/company_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_height="142dp"
        android:layout_width="264dp"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/company_name"
        app:layout_constraintVertical_bias="0.064"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/imageView2"/>

    <EditText
        android:background="#ffffff"
        android:layout_height="30dp"
        android:layout_width="190dp"
        tools:ignore="TextFields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/Username"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:hint="@string/edittext"
        android:drawableStart="@drawable/username"
        android:layout_marginBottom="365dp"/>

    <EditText
        android:background="#ffffff"
        android:layout_height="30dp"
        android:layout_width="190dp"
        tools:ignore="TextFields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/Confirm_Password"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        android:hint="@string/edittext2"
        android:drawableStart="@drawable/password"
        android:layout_marginBottom="250dp"/>

    <EditText
        android:background="#ffffff"
        android:layout_height="30dp"
        android:layout_width="190dp"
        tools:ignore="TextFields"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/Password"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/Username"
        android:hint="@string/edittext1"
        android:drawableStart="@drawable/password"
        android:layout_marginBottom="330dp"
        android:layout_marginTop="32dp"/>

    <Button
        android:layout_height="47dp"
        android:layout_width="145dp"
        app:layout_constraintVertical_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        android:layout_marginBottom="150dp"
        android:text="@string/button1"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintVertical_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        android:text="@string/button"/>

</androidx.constraintlayout.widget.ConstraintLayout>