<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/company_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="264dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        app:srcCompat="@drawable/company_name"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext3"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:background="@color/white"
        android:layout_height="34dp"
        android:layout_width="171dp"
        app:layout_constraintVertical_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:text="@string/textview"
        android:textStyle="bold"
        android:textSize="24sp"
        android:backgroundTintMode="multiply"/>

    <RatingBar
        android:background="#ffffff"
        android:layout_height="45dp"
        android:layout_width="232dp"
        app:layout_constraintVertical_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:progressTint="#FFAB00"
        android:backgroundTint="@color/white"/>

    <EditText
        android:background="#ffffff"
        android:layout_height="83dp"
        android:layout_width="318dp"
        tools:ignore="Autofill"
        app:layout_constraintVertical_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/edittext3"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        android:lines="4"
        android:hint="@string/edittext3"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:ems="10"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="149dp"
        android:layout_height="31dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/edittext4"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="100dp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="Autofill,LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>